# parametrized_singleton

./: .gitignore  CMakeLists.txt  README.md  color.hpp  dynamically_allocated_singleton.cpp  dynamically_allocated_singleton.hpp  main.cpp  shape.hpp  singleton_type.hpp  template_based_singleton.hpp
